--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('js', new Date());
 
   gtag('config', 'G-8E6L37DD0Y');
+    
+     <script>
+window.dataLayer = window.dataLayer ||[];
+window.dataLayer.push({
+  'event': 'login',
+  'loginMethod' : 'email' 
+  
+});
+  </script>
+    
 </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
